[package]
name = "bindiff"
version = "9.0.0"
description = "Find similarities and differences in disassembled code"
edition = "2021"
license = "Apache2"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["cargo", "derive"] }
petgraph = "0.6.5"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlite = "0.36.1"

[build-dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
git-version = "0.3.9"
prost-build = "0.13.3"
