[package]
name = "bindiff"
version = "9.0.0"
description = "Find similarities and differences in disassembled code"
edition = "2021"
license = "Apache2"

[dependencies]
anyhow = "1.0.89"
app_dirs2 = "2.5.5"
clap = { version = "4.5.19", features = ["cargo", "derive"] }
lazy_static = "1.5.0"
petgraph = "0.6.5"
protobuf = "3.7.1"
protobuf-json-mapping = "3.7.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
sqlite = "0.36.1"

[build-dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
git-version = "0.3.9"
protobuf-codegen = "3.7.1"
